--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: <%= ENV.fetch("RAILS_DEV_DB") %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
