--- a/containers/app/publisher/Dockerfile
+++ b/containers/app/publisher/Dockerfile
@@ -3,6 +3,7 @@ FROM ruby:2.4.1
 ENV APP_HOME /var/www
 ENV BUNDLE_PATH /bundle/ruby/2.4.1
 ENV BUNDLE_TIMEOUT 30
+ENV RAILS_DEV_DB db/publisher_db.sqlite3
 
 RUN apt-get update -qq && apt-get install -y build-essential vim
 RUN apt-get install -y mysql-client
