--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/db/feeds/*
+!/db/feeds/.keep
 
 # Ignore all logfiles and tempfiles.
 /log/*
